# pelican-tools

./: pyproject.toml  setup.py
pelican_tools/: article.py  content.py
pelican_tools/tests/: test_article.py
